sfdx-spa-alcala/force-app/main/default/objects/Subjects__c/Subjects__c.object-meta.xml
<CustomObject>
    <label>Subject</label>
    <nameField>
        <label>Subjects Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>