sfdx-spa-alcala/force-app/main/default/objects/Subjects__c/fields/Auto_Number_Code__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number_Code__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>Auto Number Code</label>
    <type>AutoNumber</type>
</CustomField>