sfdx-spa-alcala/force-app/main/default/objects/Subjects__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <formula>UPPER(LEFT(Name,3))+&#39;-&#39;+Auto_Number_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code</label>
    <type>Text</type>
</CustomField>