sfdx-spa-alcala/force-app/main/default/objects/Subjects__c/fields/Subject_Type__c.field-meta.xml
<CustomField>
    <fullName>Subject_Type__c</fullName>
    <label>Subject Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Special Subject</fullName>
            </value>
            <value>
                <fullName>Core Subject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>