sfdx-spa-alcala/force-app/main/default/objects/Subjects__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Auto_Number_Code__c</columns>
    <columns>Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>